RESOLVED FIXED167409
collectMatchingElementsInFlatTree should not find elements inside an user agent shadow tree
https://bugs.webkit.org/show_bug.cgi?id=167409
Summary collectMatchingElementsInFlatTree should not find elements inside an user age...
Ryosuke Niwa
Reported 2017-01-24 20:36:34 PST
collectMatchingElementsInFlatTree should not find elements inside an user agent shadow tree. Also, add matchingElementInFlatTree which finds the first element which matches a given selector.
Attachments
Fixes the bug (12.46 KB, patch)
2017-01-24 20:40 PST, Ryosuke Niwa
no flags
Ryosuke Niwa
Comment 1 2017-01-24 20:40:14 PST
Created attachment 299677 [details] Fixes the bug
Radar WebKit Bug Importer
Comment 2 2017-01-24 20:43:26 PST
Ryosuke Niwa
Comment 3 2017-01-25 00:47:36 PST
Comment on attachment 299677 [details] Fixes the bug Thanks for the review!
WebKit Commit Bot
Comment 4 2017-01-25 01:13:10 PST
Comment on attachment 299677 [details] Fixes the bug Clearing flags on attachment: 299677 Committed r211139: <http://trac.webkit.org/changeset/211139>
WebKit Commit Bot
Comment 5 2017-01-25 01:13:15 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.